fixed topbar on firefox. fixed mistake with minus button on focus page.

--- a/client/src/Content/app.css
+++ b/client/src/Content/app.css
@@ -106,6 +106,7 @@ a {
     z-index: 100;
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     background-color: #EEE;
+    width: -moz-available;
 }
 
 #topbar-search {
